--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -701,7 +701,7 @@ email contact or both</string>
                                                         <constraint firstAttribute="height" constant="1" id="gXF-1A-QPF"/>
                                                     </constraints>
                                                 </view>
-                                                <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dv5-8A-bHh">
+                                                <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="_First Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dv5-8A-bHh">
                                                     <rect key="frame" x="100" y="5" width="212" height="45"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="45" id="u72-Zd-S27"/>
@@ -712,7 +712,7 @@ email contact or both</string>
                                                         <outlet property="delegate" destination="pyr-NR-460" id="GMi-9H-LcQ"/>
                                                     </connections>
                                                 </textField>
-                                                <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="QWV-QQ-i2D">
+                                                <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="_Last Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="QWV-QQ-i2D">
                                                     <rect key="frame" x="100" y="50" width="212" height="45"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="45" id="atG-B4-amw"/>
@@ -787,7 +787,7 @@ email contact or both</string>
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HCM-xd-FfJ">
+                                                <textField opaque="NO" clipsSubviews="YES" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="_Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HCM-xd-FfJ">
                                                     <rect key="frame" x="8" y="0.0" width="252" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="WGP-T7-raZ"/>
@@ -865,7 +865,7 @@ email contact or both</string>
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uHi-Kg-2Nv">
+                                                <textField opaque="NO" clipsSubviews="YES" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="_Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uHi-Kg-2Nv">
                                                     <rect key="frame" x="8" y="0.0" width="252" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="WE9-OK-zvr"/>
