--- a/Peppermint/ChatTableViewCell.xib
+++ b/Peppermint/ChatTableViewCell.xib
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ChatTableViewCell" rowHeight="43" id="0hh-73-Plp" customClass="ChatTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="705" height="60"/>
+        <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ChatTableViewCell" rowHeight="153" id="0hh-73-Plp" customClass="ChatTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="705" height="170"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0hh-73-Plp" id="Bxj-xB-dM6">
-                <rect key="frame" x="0.0" y="0.0" width="705" height="59"/>
+                <rect key="frame" x="0.0" y="0.0" width="705" height="169"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_chat_left_connected" translatesAutoresizingMaskIntoConstraints="NO" id="JSg-5m-bvD">
-                        <rect key="frame" x="8" y="5" width="14" height="50"/>
+                        <rect key="frame" x="8" y="2" width="14" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="fGK-V2-Ghx"/>
                             <constraint firstAttribute="width" constant="14" id="fZH-s5-iGF"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_chat_left_flat" translatesAutoresizingMaskIntoConstraints="NO" id="gwE-ca-PTN">
-                        <rect key="frame" x="422" y="5" width="14" height="50"/>
+                        <rect key="frame" x="422" y="2" width="14" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="2yM-jX-QYb"/>
                             <constraint firstAttribute="width" constant="14" id="puC-5q-xDM"/>
                         </constraints>
                     </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DRh-1G-YWR" userLabel="MessageView">
-                        <rect key="frame" x="22" y="5" width="400" height="50"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DRh-1G-YWR" userLabel="MessageView">
+                        <rect key="frame" x="22" y="2" width="400" height="50"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Message test test test" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9o-U6-Dxl" userLabel="leftLabel">
                                 <rect key="frame" x="32" y="26" width="141" height="24"/>
@@ -119,18 +120,52 @@
                             <constraint firstItem="7Il-AU-Y5a" firstAttribute="width" secondItem="N9o-U6-Dxl" secondAttribute="width" id="w66-FZ-W1G"/>
                         </constraints>
                     </view>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mHq-Lo-kfO" userLabel="TranscriptionView">
+                        <rect key="frame" x="15" y="54" width="414" height="113"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_AUTOMATIC TRANSCRIPTION" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kN6-aH-CcF">
+                                <rect key="frame" x="14" y="0.0" width="386" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="Edd-Ae-Ix0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Lorem ipsum..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbo-rM-Uen">
+                                <rect key="frame" x="14" y="26" width="386" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="kN6-aH-CcF" secondAttribute="trailing" constant="14" id="DJB-Iq-bCa"/>
+                            <constraint firstAttribute="bottom" secondItem="Fbo-rM-Uen" secondAttribute="bottom" priority="250" id="DPL-Gg-x0U"/>
+                            <constraint firstItem="kN6-aH-CcF" firstAttribute="top" secondItem="mHq-Lo-kfO" secondAttribute="top" id="Ldt-DA-22p"/>
+                            <constraint firstItem="kN6-aH-CcF" firstAttribute="leading" secondItem="mHq-Lo-kfO" secondAttribute="leading" constant="14" id="MP5-2Q-AR2"/>
+                            <constraint firstAttribute="trailing" secondItem="Fbo-rM-Uen" secondAttribute="trailing" constant="14" id="blT-bZ-iCC"/>
+                            <constraint firstItem="Fbo-rM-Uen" firstAttribute="top" secondItem="kN6-aH-CcF" secondAttribute="bottom" id="u4e-I1-Ycy"/>
+                            <constraint firstItem="Fbo-rM-Uen" firstAttribute="leading" secondItem="mHq-Lo-kfO" secondAttribute="leading" constant="14" id="viH-ja-zWR"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" red="1" green="0.39276204549999999" blue="0.95142387949999996" alpha="1" colorSpace="calibratedRGB"/>
                 <gestureRecognizers/>
                 <constraints>
+                    <constraint firstItem="mHq-Lo-kfO" firstAttribute="leading" secondItem="DRh-1G-YWR" secondAttribute="leading" constant="-7" id="4Z7-ok-L9a"/>
                     <constraint firstItem="DRh-1G-YWR" firstAttribute="centerY" secondItem="JSg-5m-bvD" secondAttribute="centerY" id="5dG-ke-zje"/>
+                    <constraint firstItem="mHq-Lo-kfO" firstAttribute="top" secondItem="DRh-1G-YWR" secondAttribute="bottom" constant="2" id="7Ms-nw-ujW"/>
+                    <constraint firstItem="DRh-1G-YWR" firstAttribute="top" secondItem="Bxj-xB-dM6" secondAttribute="topMargin" constant="-6" id="8tD-GJ-qCX"/>
                     <constraint firstItem="gwE-ca-PTN" firstAttribute="centerY" secondItem="JSg-5m-bvD" secondAttribute="centerY" id="9C0-EO-xXa"/>
-                    <constraint firstItem="DRh-1G-YWR" firstAttribute="centerY" secondItem="Bxj-xB-dM6" secondAttribute="centerY" id="J2a-p8-QYc"/>
+                    <constraint firstItem="DRh-1G-YWR" firstAttribute="top" secondItem="JSg-5m-bvD" secondAttribute="top" id="DIl-Qd-vMh"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="mHq-Lo-kfO" secondAttribute="bottom" constant="-6" id="EhL-BY-bra"/>
+                    <constraint firstItem="gwE-ca-PTN" firstAttribute="top" secondItem="JSg-5m-bvD" secondAttribute="top" id="Mi9-QE-W6e"/>
                     <constraint firstItem="JSg-5m-bvD" firstAttribute="leading" secondItem="Bxj-xB-dM6" secondAttribute="leading" constant="8" id="Uhy-dT-uh8"/>
-                    <constraint firstItem="JSg-5m-bvD" firstAttribute="centerY" secondItem="Bxj-xB-dM6" secondAttribute="centerY" id="cSb-8n-fWm"/>
                     <constraint firstItem="gwE-ca-PTN" firstAttribute="leading" secondItem="DRh-1G-YWR" secondAttribute="trailing" id="dq0-Z8-lfv"/>
-                    <constraint firstItem="gwE-ca-PTN" firstAttribute="centerY" secondItem="Bxj-xB-dM6" secondAttribute="centerY" id="imw-N6-7cz"/>
                     <constraint firstItem="DRh-1G-YWR" firstAttribute="leading" secondItem="JSg-5m-bvD" secondAttribute="trailing" id="jhT-JK-UvG"/>
+                    <constraint firstItem="mHq-Lo-kfO" firstAttribute="trailing" secondItem="DRh-1G-YWR" secondAttribute="trailing" constant="7" id="v1l-K3-NsE"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -148,8 +183,11 @@
                 <outlet property="rightLabel" destination="7Il-AU-Y5a" id="LSM-6p-w3s"/>
                 <outlet property="spinnerView" destination="Qcp-xJ-gQY" id="w2W-Me-Fj4"/>
                 <outlet property="timelineView" destination="Cq1-S2-cTh" id="xFT-7P-9nU"/>
+                <outlet property="transcriptionView" destination="mHq-Lo-kfO" id="zvr-or-igu"/>
+                <outlet property="transctiptionContentLabel" destination="Fbo-rM-Uen" id="zbb-yh-Gsy"/>
+                <outlet property="transctiptionTitleLabel" destination="kN6-aH-CcF" id="tPz-7u-KVx"/>
             </connections>
-            <point key="canvasLocation" x="216.5" y="169"/>
+            <point key="canvasLocation" x="216.5" y="224"/>
         </tableViewCell>
     </objects>
     <resources>
