--- a/Peppermint/ChatTableViewCell.xib
+++ b/Peppermint/ChatTableViewCell.xib
@@ -15,6 +15,42 @@
                 <rect key="frame" x="0.0" y="0.0" width="705" height="169"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mHq-Lo-kfO" userLabel="TranscriptionView">
+                        <rect key="frame" x="16" y="46" width="412" height="121"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_AUTOMATIC TRANSCRIPTION" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kN6-aH-CcF">
+                                <rect key="frame" x="14" y="5" width="384" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="Edd-Ae-Ix0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Lorem ipsum..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbo-rM-Uen">
+                                <rect key="frame" x="14" y="29" width="384" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="kN6-aH-CcF" secondAttribute="trailing" constant="14" id="DJB-Iq-bCa"/>
+                            <constraint firstAttribute="bottom" secondItem="Fbo-rM-Uen" secondAttribute="bottom" priority="250" id="DPL-Gg-x0U"/>
+                            <constraint firstItem="kN6-aH-CcF" firstAttribute="top" secondItem="mHq-Lo-kfO" secondAttribute="top" id="Ldt-DA-22p"/>
+                            <constraint firstItem="kN6-aH-CcF" firstAttribute="leading" secondItem="mHq-Lo-kfO" secondAttribute="leading" constant="14" id="MP5-2Q-AR2"/>
+                            <constraint firstItem="kN6-aH-CcF" firstAttribute="top" secondItem="mHq-Lo-kfO" secondAttribute="top" constant="5" id="Y1y-3M-Fmy"/>
+                            <constraint firstAttribute="trailing" secondItem="Fbo-rM-Uen" secondAttribute="trailing" constant="14" id="blT-bZ-iCC"/>
+                            <constraint firstItem="Fbo-rM-Uen" firstAttribute="top" secondItem="kN6-aH-CcF" secondAttribute="bottom" constant="-2" id="u4e-I1-Ycy"/>
+                            <constraint firstItem="Fbo-rM-Uen" firstAttribute="leading" secondItem="mHq-Lo-kfO" secondAttribute="leading" constant="14" id="viH-ja-zWR"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Ldt-DA-22p"/>
+                            </mask>
+                        </variation>
+                    </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_chat_left_connected" translatesAutoresizingMaskIntoConstraints="NO" id="JSg-5m-bvD">
                         <rect key="frame" x="8" y="2" width="14" height="50"/>
                         <constraints>
@@ -29,9 +65,38 @@
                             <constraint firstAttribute="width" constant="14" id="puC-5q-xDM"/>
                         </constraints>
                     </imageView>
-                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DRh-1G-YWR" userLabel="MessageView">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DRh-1G-YWR" userLabel="MessageView">
                         <rect key="frame" x="22" y="2" width="400" height="50"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rzs-nr-fjS" userLabel="SeparatorView">
+                                <rect key="frame" x="-6" y="44" width="412" height="9"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIM-6G-Sck">
+                                        <rect key="frame" x="0.0" y="-2" width="412" height="8"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="8" id="qg7-ZM-Fyw"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kbc-hB-cLm">
+                                        <rect key="frame" x="0.0" y="7" width="412" height="4"/>
+                                        <color key="backgroundColor" red="1" green="0.0" blue="0.050213125070000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="4" id="fzU-ZK-bIr"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.48128892690000002" blue="0.29840627149999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="oIM-6G-Sck" firstAttribute="leading" secondItem="rzs-nr-fjS" secondAttribute="leading" id="7yV-gY-LUf"/>
+                                    <constraint firstAttribute="bottom" secondItem="Kbc-hB-cLm" secondAttribute="bottom" constant="-2" id="BBW-BS-njY"/>
+                                    <constraint firstAttribute="trailing" secondItem="Kbc-hB-cLm" secondAttribute="trailing" id="BFZ-B6-HYw"/>
+                                    <constraint firstItem="oIM-6G-Sck" firstAttribute="top" secondItem="rzs-nr-fjS" secondAttribute="top" constant="-2" id="MnO-WH-FHY"/>
+                                    <constraint firstAttribute="height" constant="9" id="Mqy-eL-BWr"/>
+                                    <constraint firstAttribute="trailing" secondItem="oIM-6G-Sck" secondAttribute="trailing" id="ORK-Ju-yF5"/>
+                                    <constraint firstItem="Kbc-hB-cLm" firstAttribute="leading" secondItem="rzs-nr-fjS" secondAttribute="leading" id="w1y-jV-hvK"/>
+                                </constraints>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Message test test test" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9o-U6-Dxl" userLabel="leftLabel">
                                 <rect key="frame" x="32" y="26" width="141" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -93,10 +158,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="rzs-nr-fjS" secondAttribute="bottom" constant="-3" id="1Im-sB-iQT"/>
                             <constraint firstItem="Cq1-S2-cTh" firstAttribute="centerY" secondItem="DRh-1G-YWR" secondAttribute="centerY" id="2WA-Z1-avq"/>
                             <constraint firstItem="N6k-WJ-i9s" firstAttribute="centerY" secondItem="DRh-1G-YWR" secondAttribute="centerY" id="2lo-kW-y7U"/>
                             <constraint firstAttribute="bottom" secondItem="N9o-U6-Dxl" secondAttribute="bottom" id="7Kn-rl-eza"/>
+                            <constraint firstAttribute="trailing" secondItem="rzs-nr-fjS" secondAttribute="trailing" constant="-6" id="8VZ-a2-bbr"/>
                             <constraint firstItem="RDh-gW-uQJ" firstAttribute="leading" secondItem="DRh-1G-YWR" secondAttribute="leading" id="97d-re-hlt"/>
+                            <constraint firstItem="rzs-nr-fjS" firstAttribute="leading" secondItem="DRh-1G-YWR" secondAttribute="leading" constant="-6" id="EsG-OO-7ED"/>
                             <constraint firstAttribute="trailing" secondItem="7Il-AU-Y5a" secondAttribute="trailing" constant="8" id="FSO-lZ-O9A"/>
                             <constraint firstItem="Cq1-S2-cTh" firstAttribute="leading" secondItem="N6k-WJ-i9s" secondAttribute="trailing" constant="7" id="GS3-w7-wfw"/>
                             <constraint firstAttribute="height" constant="50" id="JiX-eC-jzC"/>
@@ -120,43 +188,13 @@
                             <constraint firstItem="7Il-AU-Y5a" firstAttribute="width" secondItem="N9o-U6-Dxl" secondAttribute="width" id="w66-FZ-W1G"/>
                         </constraints>
                     </view>
-                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mHq-Lo-kfO" userLabel="TranscriptionView">
-                        <rect key="frame" x="15" y="54" width="414" height="113"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_AUTOMATIC TRANSCRIPTION" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kN6-aH-CcF">
-                                <rect key="frame" x="14" y="0.0" width="386" height="26"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="26" id="Edd-Ae-Ix0"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Lorem ipsum..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbo-rM-Uen">
-                                <rect key="frame" x="14" y="26" width="386" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="kN6-aH-CcF" secondAttribute="trailing" constant="14" id="DJB-Iq-bCa"/>
-                            <constraint firstAttribute="bottom" secondItem="Fbo-rM-Uen" secondAttribute="bottom" priority="250" id="DPL-Gg-x0U"/>
-                            <constraint firstItem="kN6-aH-CcF" firstAttribute="top" secondItem="mHq-Lo-kfO" secondAttribute="top" id="Ldt-DA-22p"/>
-                            <constraint firstItem="kN6-aH-CcF" firstAttribute="leading" secondItem="mHq-Lo-kfO" secondAttribute="leading" constant="14" id="MP5-2Q-AR2"/>
-                            <constraint firstAttribute="trailing" secondItem="Fbo-rM-Uen" secondAttribute="trailing" constant="14" id="blT-bZ-iCC"/>
-                            <constraint firstItem="Fbo-rM-Uen" firstAttribute="top" secondItem="kN6-aH-CcF" secondAttribute="bottom" id="u4e-I1-Ycy"/>
-                            <constraint firstItem="Fbo-rM-Uen" firstAttribute="leading" secondItem="mHq-Lo-kfO" secondAttribute="leading" constant="14" id="viH-ja-zWR"/>
-                        </constraints>
-                    </view>
                 </subviews>
                 <color key="backgroundColor" red="1" green="0.39276204549999999" blue="0.95142387949999996" alpha="1" colorSpace="calibratedRGB"/>
                 <gestureRecognizers/>
                 <constraints>
-                    <constraint firstItem="mHq-Lo-kfO" firstAttribute="leading" secondItem="DRh-1G-YWR" secondAttribute="leading" constant="-7" id="4Z7-ok-L9a"/>
+                    <constraint firstItem="mHq-Lo-kfO" firstAttribute="leading" secondItem="DRh-1G-YWR" secondAttribute="leading" constant="-6" id="4Z7-ok-L9a"/>
                     <constraint firstItem="DRh-1G-YWR" firstAttribute="centerY" secondItem="JSg-5m-bvD" secondAttribute="centerY" id="5dG-ke-zje"/>
-                    <constraint firstItem="mHq-Lo-kfO" firstAttribute="top" secondItem="DRh-1G-YWR" secondAttribute="bottom" constant="2" id="7Ms-nw-ujW"/>
+                    <constraint firstItem="mHq-Lo-kfO" firstAttribute="top" secondItem="DRh-1G-YWR" secondAttribute="bottom" constant="-6" id="7Ms-nw-ujW"/>
                     <constraint firstItem="DRh-1G-YWR" firstAttribute="top" secondItem="Bxj-xB-dM6" secondAttribute="topMargin" constant="-6" id="8tD-GJ-qCX"/>
                     <constraint firstItem="gwE-ca-PTN" firstAttribute="centerY" secondItem="JSg-5m-bvD" secondAttribute="centerY" id="9C0-EO-xXa"/>
                     <constraint firstItem="DRh-1G-YWR" firstAttribute="top" secondItem="JSg-5m-bvD" secondAttribute="top" id="DIl-Qd-vMh"/>
@@ -165,7 +203,7 @@
                     <constraint firstItem="JSg-5m-bvD" firstAttribute="leading" secondItem="Bxj-xB-dM6" secondAttribute="leading" constant="8" id="Uhy-dT-uh8"/>
                     <constraint firstItem="gwE-ca-PTN" firstAttribute="leading" secondItem="DRh-1G-YWR" secondAttribute="trailing" id="dq0-Z8-lfv"/>
                     <constraint firstItem="DRh-1G-YWR" firstAttribute="leading" secondItem="JSg-5m-bvD" secondAttribute="trailing" id="jhT-JK-UvG"/>
-                    <constraint firstItem="mHq-Lo-kfO" firstAttribute="trailing" secondItem="DRh-1G-YWR" secondAttribute="trailing" constant="7" id="v1l-K3-NsE"/>
+                    <constraint firstItem="mHq-Lo-kfO" firstAttribute="trailing" secondItem="DRh-1G-YWR" secondAttribute="trailing" constant="6" id="v1l-K3-NsE"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -181,6 +219,9 @@
                 <outlet property="playPauseImageView" destination="N6k-WJ-i9s" id="uc1-5t-dap"/>
                 <outlet property="rightImageView" destination="gwE-ca-PTN" id="eEB-2v-9QC"/>
                 <outlet property="rightLabel" destination="7Il-AU-Y5a" id="LSM-6p-w3s"/>
+                <outlet property="separatorView" destination="rzs-nr-fjS" id="J8N-lc-fVO"/>
+                <outlet property="separatorViewBottomContent" destination="Kbc-hB-cLm" id="fnx-oo-KTB"/>
+                <outlet property="separatorViewTopContent" destination="oIM-6G-Sck" id="NX7-th-UFy"/>
                 <outlet property="spinnerView" destination="Qcp-xJ-gQY" id="w2W-Me-Fj4"/>
                 <outlet property="timelineView" destination="Cq1-S2-cTh" id="xFT-7P-9nU"/>
                 <outlet property="transcriptionView" destination="mHq-Lo-kfO" id="zvr-or-igu"/>
